--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -2,10 +2,15 @@
 
 // Config vars
 $kaldi-red: #FD461E
+// $kaldi-red: #00d1b2
 $kaldi-red-invert: #fff
 
 $primary: $kaldi-red
 $primary-invert: $kaldi-red-invert
+
+nav
+  box-shadow: 0 2px 0 0 #f5f5f5;
+  // border-bottom: lightgray solid 0.1vmin
 
 .content .taglist
   list-style: none
