--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,16 +1,20 @@
 @import "~bulma/sass/utilities/initial-variables"
 
 // Config vars
-$kaldi-red: #FD461E
+// $kaldi-red: #FD461E
 // $kaldi-red: #00d1b2
+$kaldi-red: #209CEE
 $kaldi-red-invert: #fff
 
 $primary: $kaldi-red
 $primary-invert: $kaldi-red-invert
 
 nav
-  box-shadow: 0 2px 0 0 #f5f5f5;
+  box-shadow: 0 2px 0 0 #f5f5f5
   // border-bottom: lightgray solid 0.1vmin
+
+.navbar .navbar-brand
+  margin-left: -.75rem
 
 .content .taglist
   list-style: none
