--- a/src/styles/theme-sass/_all.sass
+++ b/src/styles/theme-sass/_all.sass
@@ -15,5 +15,5 @@
 /* --------------------------------------------------------------------------------
 	THEME SPECIFIC STYLES
  -------------------------------------------------------------------------------- */
-@import "components/custom.sass"
-@import "elements/custom.sass"
+@import "components/_custom.sass"
+@import "elements/_custom.sass"
