--- a/src/styles/theme-sass/components/_custom.sass
+++ b/src/styles/theme-sass/components/_custom.sass
@@ -8,6 +8,7 @@
 @import 'breadcrumb/_custom.sass'
 @import 'card/_custom.sass'
 @import 'dropdown/_custom.sass'
+@import 'layout/_custom.sass'
 @import 'level/_custom.sass'
 @import 'media/_custom.sass'
 @import 'menu/_custom.sass'
