--- a/src/styles/theme-sass/components/layout/hero/_custom.sass
+++ b/src/styles/theme-sass/components/layout/hero/_custom.sass
@@ -1,5 +1,7 @@
 /**
  * -------------------------------------
- *  FORM ELEMENT VARIABLES
+ * HERO LAYOUT CUSTOMIZATION
  * -------------------------------------
  */
+.hero-body
+	padding: 1.5rem
