--- a/src/styles/theme-sass/components/layout/section/_custom.sass
+++ b/src/styles/theme-sass/components/layout/section/_custom.sass
@@ -1,5 +1,5 @@
 /**
  * -------------------------------------
- *  TABS COMPONENT VARIABLES
+ * SECTION LAYOUT CUSTOMIZATION
  * -------------------------------------
  */
