--- a/src/styles/theme-sass/components/layout/section/_variables.sass
+++ b/src/styles/theme-sass/components/layout/section/_variables.sass
@@ -1,5 +1,5 @@
 /**
  * -------------------------------------
- *  NOTIFICATION ELEMENT VARIABLES
+ *  SECTION LAYOUT VARIABLES
  * -------------------------------------
  */
