--- a/src/styles/theme-sass/variables/_colors.sass
+++ b/src/styles/theme-sass/variables/_colors.sass
@@ -6,30 +6,35 @@
 /* --------------------------------------------------------------------------------
 	[1] BRAND COLORS
  -------------------------------------------------------------------------------- */
-$black:        hsl(0, 0%, 4%)
-$black-bis:    hsl(0, 0%, 7%)
-$black-ter:    hsl(0, 0%, 14%)
+$black:        			hsl(0, 0%, 4%)
+$black-bis:    			hsl(0, 0%, 7%)
+$black-ter:    			hsl(0, 0%, 14%)
 
-$grey-darker:  hsl(208, 26%, 28%)
-$grey-dark:    hsl(208, 25%, 35%)
-$grey:         hsl(0, 0%, 48%)
-$grey-light:   hsl(204, 9%, 78%)
-$grey-lighter: hsl(192, 17%, 94%)
+$grey-blue-darker:  #293541
+$grey-blue-dark:    #2f3d4a
+$grey-darker:  			hsl(208, 26%, 28%)
+$grey-dark:    			hsl(208, 25%, 35%)
+$grey:         			hsl(0, 0%, 48%)
+$grey-light:   			hsl(204, 9%, 78%)
+$grey-lighter: 			hsl(192, 17%, 94%)
 
-$white-ter:    hsl(0, 0%, 97%)
-$white-bis:    hsl(0, 0%, 98%)
-$white:        hsl(0, 0%, 100%)
+$silver: 			 			hsl(0, 0%, 65%)
 
-$orange:       hsl(33, 88%, 58%)
-$yellow:       hsl(47, 95%, 58%)
-$green:        hsl(101, 40%, 53%)
-$turquoise:    hsl(185, 62%, 45%)
-$cyan:         hsl(186, 54%, 66%)
-$blue:         hsl(203, 59%, 47%)
-$purple:       hsl(283, 41%, 51%)
-$red: 		   	 hsl(1, 81%, 63%)
+$white-ter:    			hsl(0, 0%, 97%)
+$white-bis:    			hsl(0, 0%, 98%)
+$white:        			hsl(0, 0%, 100%)
 
-$primary: $turquoise
+$orange:       			hsl(33, 88%, 58%)
+$yellow:       			hsl(47, 95%, 58%)
+$green:        			hsl(101, 40%, 53%)
+$turquoise:    			hsl(185, 62%, 45%)
+$cyan:         			hsl(186, 54%, 66%)
+// $blue:         			hsl(203, 59%, 47%)
+$blue:         			hsl(208, 79%, 51%)
+$purple:       			hsl(283, 41%, 51%)
+$red: 		   	 			hsl(1, 81%, 63%)
+
+$primary: $blue
 
 $info: $turquoise
 $success: $green
@@ -47,7 +52,7 @@ $dark: $grey-darker
 /* --------------------------------------------------------------------------------
 	[3] GENERAL COLORS
  -------------------------------------------------------------------------------- */
-$background: $white
+// $background: $white
 
 /* --------------------------------------------------------------------------------
 	[4] TEXT COLORS
