--- a/src/styles/theme-sass/variables/_typography.sass
+++ b/src/styles/theme-sass/variables/_typography.sass
@@ -7,7 +7,7 @@
 $family-sans-serif: 'Lato',-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif
 
 $family-primary: $family-sans-serif
-$body-line-height: 2rem
+// $body-line-height: 2rem
 
 /* --------------------------------------------------------------------------------
   SIZES
@@ -23,7 +23,7 @@ $weight-normal: 400
 $weight-medium: 500
 $weight-semibold: 600
 $weight-bold: 700
-  
+
 /* --------------------------------------------------------------------------------
 	MAKE TEXT RESPONSIVE
  -------------------------------------------------------------------------------- */
