update blog page to show articles in cards

--- a/src/styles/theme-sass/variables/_colors.sass
+++ b/src/styles/theme-sass/variables/_colors.sass
@@ -29,8 +29,11 @@ $yellow:       			hsl(47, 95%, 58%)
 $green:        			hsl(101, 40%, 53%)
 $turquoise:    			hsl(185, 62%, 45%)
 $cyan:         			hsl(186, 54%, 66%)
+$cyan-lighter:			#EFF3F4
+$cyan-blue:					hsl(200, 9%, 45%)
 // $blue:         			hsl(203, 59%, 47%)
 $blue:         			hsl(208, 79%, 51%)
+$blue-lighter:			hsl(228, 33%, 97%)
 $purple:       			hsl(283, 41%, 51%)
 $red: 		   	 			hsl(1, 81%, 63%)
 
@@ -52,7 +55,8 @@ $dark: $grey-darker
 /* --------------------------------------------------------------------------------
 	[3] GENERAL COLORS
  -------------------------------------------------------------------------------- */
-// $background: $white
+// $background: rgba(0,0,0,.05)
+// $background: $blue-lighter
 
 /* --------------------------------------------------------------------------------
 	[4] TEXT COLORS
