--- a/src/styles/theme-sass/_helpers.sass
+++ b/src/styles/theme-sass/_helpers.sass
@@ -14,6 +14,24 @@
 .margin-top-0
   margin-top: 0 !important
 
+.has-background-blue-lighter
+   background-color: $cyan-lighter
+
+
+.is-shady
+  box-shadow: rgba(0, 0, 0, .1) 0 1px 0
+  border-radius: 4px
+  display: inline-block
+  margin: 10px
+  position: relative
+  @include animation(flyintoright, .4s, backwards)
+  @include transition(all, 2s, ease-out)
+  // background: #fff
+// #EFF3F4
+  .is-shady:hover
+    box-shadow: 0 10px 16px rgba(0, 0, 0, .13), 0 6px 6px rgba(0, 0, 0, .19)
+
+
   /*-------------------------------------*/
 
 .is-fullheight
