add Mapbox component

--- a/src/styles/theme-sass/_helpers.sass
+++ b/src/styles/theme-sass/_helpers.sass
@@ -17,6 +17,10 @@
 .has-background-blue-lighter
    background-color: $cyan-lighter
 
+.full-width-map-container
+  height: 40vh
+  margin-top: 3rem
+
 
 .is-shady
   box-shadow: rgba(0, 0, 0, .1) 0 1px 0
@@ -30,7 +34,6 @@
 // #EFF3F4
   .is-shady:hover
     box-shadow: 0 10px 16px rgba(0, 0, 0, .13), 0 6px 6px rgba(0, 0, 0, .19)
-
 
   /*-------------------------------------*/
 
