add fullscreen button

--- a/src/styles/theme-sass/_helpers.sass
+++ b/src/styles/theme-sass/_helpers.sass
@@ -21,6 +21,9 @@
   height: 40vh
   margin-top: 3rem
 
+.fullscreen-enabled .full-width-map-container
+  margin-top: 0
+  height: 100vh
 
 .is-shady
   box-shadow: rgba(0, 0, 0, .1) 0 1px 0
